[metadata]
name = gcodepy
version = 0.0.1
author = Rahul Menon
author_email = menonrahul02@gmail.com
description = Tool to generate g-code for Marlin based printers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmeno12/gcodepy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src